--- a/src/assets/scss/components/_movie-player.scss
+++ b/src/assets/scss/components/_movie-player.scss
@@ -19,7 +19,7 @@
     &:hover,
     &:active {
       .close-player {
-        opacity: 1;
+        animation: closeButton 0.5s forwards;
       }
     }
 
@@ -37,17 +37,41 @@
 
     .close-player {
       position: absolute;
-      top: 60px;
-      right: 30px;
-      display: flex;
-      z-index: 3000;
+      top: 0px;
+      width: 45px;
+      border-radius: 50%;
       opacity: 0;
-      font-size: 30px;
+      font-size: 15px;
+      padding: 15px;
+      display: flex;
+      justify-content: center;
+      z-index: 3000;
       cursor: pointer;
+      background-color: #333;
 
       &:hover {
         opacity: 0.7;
       }
     }
+  }
+}
+
+@keyframes closeButton {
+  0% {
+    opacity: 0;
+    top: 0px;
+  }
+  20% {
+    opacity: 0;
+    top: 20px;
+  }
+
+  50% {
+    opacity: 0;
+    top: 40px;
+  }
+  100% {
+    top: 60px;
+    opacity: 1;
   }
 }
