--- a/src/assets/scss/components/_trailer.scss
+++ b/src/assets/scss/components/_trailer.scss
@@ -1,35 +1,42 @@
 .trailer-overlay {
+  // position: fixed;
+  // top: 0;
+  // left: 0;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
+  // width: 100%;
+  // height: 100%;
+  // background-color: rgba($color: #000000, $alpha: 0.85);
+  // margin: auto;
+  // z-index: 9999;
+  // cursor: pointer;
+
   position: fixed;
   top: 0;
   left: 0;
+  bottom: 0;
+  right: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: rgba($color: #000000, $alpha: 0.85);
+  background-color: rgba($color: #000000, $alpha: 0.8);
   margin: auto;
-  z-index: 9999;
+  z-index: 2000;
   cursor: pointer;
 
   .inner {
     // position: relative;
-    // width: 100%;
-    // height: 100%;
-    // max-width: 100%;
-    max-width: 80vh;
-    max-height: 100vh;
-    cursor: default;
-    // margin: auto;
-    // padding: 0 10px;
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
+    display: flex;
+    justify-content: center;
 
-    .player-wrapper {
+    .trailer-wrapper {
       position: relative;
-      z-index: 1;
+      justify-content: center;
 
       &.trailer-player {
         width: 90vmin;
@@ -56,26 +63,44 @@
       }
     }
 
-    // .player,
-    // video {
-    //   // position: absolute;
-    //   // width: 650px;
-    //   // height: 300px;
-
-    //   @include media("<desktop") {
-    //     // width: 100% !important;
-    //     // height: 100% !important;
-    //     // top: 0;
-    //     // left: 0;
-    //   }
-    // }
-
-    .trailer-close {
-      display: flex;
+    .close-player {
       position: absolute;
-      right: 0;
-      padding: 10px;
+      top: 0px;
+      width: 45px;
+      border-radius: 50%;
+      // opacity: 0;
+      font-size: 15px;
+      padding: 15px;
+      display: flex;
+      justify-content: center;
+      z-index: 3000;
       cursor: pointer;
+      background-color: #333;
+      animation: trailerClose 0.5s forwards;
+
+      &:hover {
+        opacity: 0.7;
+      }
     }
+  }
+}
+
+@keyframes trailerClose {
+  0% {
+    opacity: 0;
+    top: 0px;
+  }
+  20% {
+    opacity: 0;
+    top: 20px;
+  }
+
+  50% {
+    opacity: 0;
+    top: 30px;
+  }
+  100% {
+    top: 40px;
+    opacity: 1;
   }
 }
